--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,31 +1,17 @@
 {
-  "name": "PWA",
-  "short_name": "Basic PWA",
+  "name": "PWA template",
+  "short_name": "Pwa",
+  "icons": [{
+    "src": "img/favicon/apple-touch-icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    }, {
+      "src": "img/favicon/apple-touch-icon-114x114.png",
+      "sizes": "114x114",
+      "type": "image/png"
+    }],
   "start_url": ".",
   "display": "standalone",
-  "orientation": "portrait",
-  "background_color": "#ccc",
-  "theme_color": "#5FAAE5",
-  "icons": [
-    {
-      "src": "/src/images/icons/app-icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "/src/images/icons/app-icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "/src/images/icons/app-icon-256x256.png",
-      "sizes": "256x256",
-      "type": "image/png"
-    },
-    {
-      "src": "/src/images/icons/app-icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "background_color": "#3E4EB8",
+  "theme_color": "#2F3BA2"
 }
